# blasr_libcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bamboo_build.sh  configure.py  exports  makefile  meson.build  meson_options.txt  rules.mk  travis.sh
alignment/: MappingMetrics.cpp  MappingMetrics.hpp  makefile  meson.build
alignment/algorithms/: meson.build
alignment/anchoring/: AnchorParameters.hpp  meson.build
alignment/bwt/: BWT.hpp  Occ.hpp  PackedHash.hpp  Pos.hpp  meson.build
alignment/datastructures/: meson.build
alignment/files/: BaseSequenceIO.cpp  BaseSequenceIO.hpp  CCSIterator.cpp  CCSIterator.hpp  FragmentCCSIterator.cpp  FragmentCCSIterator.hpp  ReaderAgglomerate.cpp  ReaderAgglomerate.hpp  ReaderAgglomerateImpl.hpp  meson.build
alignment/format/: BAMPrinter.hpp  BAMPrinterImpl.hpp  CompareSequencesPrinter.cpp  CompareSequencesPrinter.hpp  CompareSequencesPrinterImpl.hpp  IntervalPrinter.cpp  IntervalPrinter.hpp  SAMHeaderPrinter.cpp  SAMHeaderPrinter.hpp  SAMPrinter.cpp  SAMPrinter.hpp  SAMPrinterImpl.hpp  StickAlignmentPrinter.hpp  SummaryPrinter.cpp  SummaryPrinter.hpp  VulgarPrinter.hpp  XMLPrinter.hpp  meson.build
alignment/ipc/: SharedMemoryAllocator.hpp  meson.build
alignment/query/: PbiFilterZmwGroupQuery.cpp  PbiFilterZmwGroupQuery.h  SequentialZmwGroupQuery.cpp  SequentialZmwGroupQuery.h  meson.build
alignment/qvs/: QualityValueProfile.cpp  QualityValueProfile.hpp  meson.build
alignment/simulator/: CDFMap.hpp  ContextOutputList.hpp  ContextSample.cpp  ContextSample.hpp  ContextSet.cpp  ContextSet.hpp  LengthHistogram.cpp  LengthHistogram.hpp  OutputList.hpp  OutputSample.hpp  OutputSampleList.hpp  OutputSampleListSet.hpp  QualitySample.cpp  QualitySample.hpp  meson.build
alignment/statistics/: AnchorDistributionTable.hpp  LookupAnchorDistribution.cpp  LookupAnchorDistribution.hpp  StatUtils.cpp  StatUtils.hpp  StatUtilsImpl.hpp  VarianceAccumulator.hpp  VarianceAccumulatorImpl.hpp  cdfs.cpp  cdfs.hpp  meson.build  pdfs.cpp  pdfs.hpp
alignment/suffixarray/: LCPTable.hpp  SharedSuffixArray.hpp  SuffixArray.hpp  SuffixArrayTypes.hpp  meson.build  ssort.hpp
alignment/tuples/: BaseTuple.cpp  BaseTuple.hpp  CompressedDNATuple.hpp  CountedTuple.h  DNATuple.cpp  DNATuple.hpp  DNATupleImpl.hpp  DNATupleList.h  HashedTupleList.hpp  HashedTupleListImpl.hpp  TupleCountTable.hpp  TupleCountTableImpl.hpp  TupleList.hpp  TupleListImpl.hpp  TupleMask.h  TupleMatching.hpp  TupleMatchingImpl.hpp  TupleMetrics.cpp  TupleMetrics.hpp  TupleOperations.h  TupleTranslations.h  meson.build  tuple.h
alignment/utils/: BlasrFileUtils.cpp  FileOfFileNames.cpp  FileOfFileNames.hpp  FileUtils.cpp  FileUtils.hpp  LogUtils.cpp  LogUtils.hpp  PhredUtils.cpp  PhredUtils.hpp  RangeUtils.cpp  RangeUtils.hpp  RegionUtils.cpp  RegionUtils.hpp  RegionUtilsImpl.hpp  SimpleXMLUtils.hpp  meson.build
hdf/: BufferedHDF2DArray.cpp  BufferedHDF2DArray.hpp  BufferedHDF2DArrayImpl.hpp  BufferedHDFArray.cpp  BufferedHDFArray.hpp  BufferedHDFArrayImpl.hpp  DatasetCollection.cpp  DatasetCollection.hpp  DatasetCollectionImpl.hpp  HDF2DArray.hpp  HDFAlnGroup.hpp  HDFAlnGroupGroup.cpp  HDFAlnGroupGroup.hpp  HDFAlnInfoGroup.cpp  HDFAlnInfoGroup.hpp  HDFAlnInfoGroup.o.tmp.rm.login14-biofx01.11097  HDFArray.hpp  HDFAtom.cpp  HDFAtom.hpp  HDFAttributable.cpp  HDFAttributable.hpp  HDFBasReader.hpp  HDFBasWriter.hpp  HDFBaseCallsWriter.cpp  HDFBaseCallsWriter.hpp  HDFBaxWriter.cpp  HDFBaxWriter.hpp  HDFCCSReader.hpp  HDFCmpData.hpp  HDFCmpExperimentGroup.cpp  HDFCmpExperimentGroup.hpp  HDFCmpFile.hpp  HDFCmpReader.hpp  HDFCmpRefAlignmentGroup.hpp  HDFCmpRootGroup.hpp  HDFCmpSupportedFields.cpp  HDFCmpSupportedFields.hpp  HDFCommonFG.hpp  HDFConfig.hpp  HDFData.cpp  (+43 more)
pbdata/: BlasrFASTAReader.cpp  BlasrFASTQReader.cpp  CCSSequence.cpp  CCSSequence.hpp  ChangeListID.cpp  ChangeListID.hpp  CommandLineParser.cpp  CommandLineParser.hpp  Compare4BitCompressed.hpp  CompressedDNASequence.hpp  CompressedSequence.hpp  CompressedSequenceImpl.hpp  DNASequence.cpp  DNASequence.hpp  Enumerations.h  FASTAReader.cpp  FASTAReader.hpp  FASTASequence.cpp  FASTASequence.hpp  FASTQReader.cpp  FASTQReader.hpp  FASTQSequence.cpp  FASTQSequence.hpp  GFFFile.cpp  GFFFile.hpp  MD5Utils.cpp  MD5Utils.hpp  NucConversion.cpp  PacBioDefs.h  PackedDNASequence.cpp  PackedDNASequence.hpp  PrettyException.hpp  ReverseCompressIndex.cpp  ReverseCompressIndex.hpp  SMRTSequence.cpp  SMRTSequence.hpp  SeqUtils.hpp  SeqUtilsImpl.hpp  StringUtils.cpp  StringUtils.hpp  (+5 more)
pbdata/alignment/: CmpAlignment.cpp  CmpAlignment.hpp  CmpAlignmentImpl.hpp  meson.build
pbdata/amos/: AfgBasWriter.cpp  AfgBasWriter.hpp  meson.build
pbdata/loadpulses/: MetricField.cpp  MetricField.hpp  MovieAlnIndexLookupTable.cpp  MovieAlnIndexLookupTable.hpp  meson.build
pbdata/matrix/: FlatMatrix.hpp  FlatMatrixImpl.hpp  Matrix.hpp  MatrixImpl.hpp  meson.build
pbdata/metagenome/: FindRandomSequence.hpp  SequenceIndexDatabase.hpp  SequenceIndexDatabaseImpl.hpp  TitleTable.cpp  TitleTable.hpp  meson.build
pbdata/qvs/: BlasrQualityValue.cpp  QualityTransform.cpp  QualityTransform.hpp  QualityValue.cpp  QualityValue.hpp  QualityValueVector.hpp  QualityValueVectorImpl.hpp  meson.build
pbdata/reads/: AcqParams.cpp  AcqParams.hpp  BaseFile.cpp  BaseFile.hpp  BaseFileImpl.hpp  HoleXY.cpp  HoleXY.hpp  PulseBaseCommon.cpp  PulseBaseCommon.hpp  PulseFile.cpp  PulseFile.hpp  PulseFileImpl.hpp  ReadInterval.hpp  ReadType.cpp  RegionAnnotation.cpp  RegionAnnotation.hpp  RegionAnnotations.cpp  RegionAnnotations.hpp  RegionTable.cpp  RegionTable.hpp  RegionTypeMap.cpp  RegionTypeMap.hpp  ScanData.cpp  ScanData.hpp  ZMWGroupEntry.cpp  ZMWGroupEntry.hpp  meson.build
pbdata/saf/: AlnGroup.cpp  AlnGroup.hpp  AlnInfo.hpp  MovieInfo.cpp  MovieInfo.hpp  RefGroup.cpp  RefGroup.hpp  RefInfo.cpp  RefInfo.hpp  meson.build
pbdata/sam/: AlignmentSet.hpp  AlignmentSetImpl.hpp  CigarString.h  ReadGroup.cpp  ReadGroup.hpp  ReferenceSequence.cpp  ReferenceSequence.hpp  SAMAlignment.cpp  SAMAlignment.hpp  SAMHeader.cpp  (+7 more)
unittest/: makefile  meson.build
(+204 files in other folders)
