###########
# Sources #
###########

libblasr_sources += files([
  'BufferedHDF2DArray.cpp',
  'BufferedHDFArray.cpp',
  'DatasetCollection.cpp',
  'HDFAlnGroupGroup.cpp',
  'HDFAlnInfoGroup.cpp',
  'HDFAtom.cpp',
  'HDFAttributable.cpp',
  'HDFBaseCallsWriter.cpp',
  'HDFBaxWriter.cpp',
  'HDFCmpExperimentGroup.cpp',
  'HDFCmpSupportedFields.cpp',
  'HDFData.cpp',
  'HDFFile.cpp',
  'HDFGroup.cpp',
  'HDFNewBasReader.cpp',
  'HDFPulseCallsWriter.cpp',
  'HDFPulseDataFile.cpp',
  'HDFPulseH5Writer.cpp',
  'HDFPulseWriter.cpp',
  'HDFRegionsWriter.cpp',
  'HDFRegionTableReader.cpp',
  'HDFScanDataReader.cpp',
  'HDFScanDataWriter.cpp',
  'HDFUtils.cpp',
  'HDFWriterBase.cpp',
  'HDFZMWMetricsWriter.cpp',
  'HDFZMWReader.cpp',
  'HDFZMWWriter.cpp'])

###########
# Headers #
###########

meson.is_subproject() and subdir_done()

install_headers(
  files([
    'BufferedHDF2DArray.hpp',
    'BufferedHDF2DArrayImpl.hpp',
    'BufferedHDFArray.hpp',
    'BufferedHDFArrayImpl.hpp',
    'DatasetCollection.hpp',
    'DatasetCollectionImpl.hpp',
    'HDF2DArray.hpp',
    'HDFAlnGroupGroup.hpp',
    'HDFAlnGroup.hpp',
    'HDFAlnInfoGroup.hpp',
    'HDFArray.hpp',
    'HDFAtom.hpp',
    'HDFAttributable.hpp',
    'HDFBaseCallsWriter.hpp',
    'HDFBasReader.hpp',
    'HDFBasWriter.hpp',
    'HDFBaxWriter.hpp',
    'HDFCCSReader.hpp',
    'HDFCmpData.hpp',
    'HDFCmpExperimentGroup.hpp',
    'HDFCmpFile.hpp',
    'HDFCmpReader.hpp',
    'HDFCmpRefAlignmentGroup.hpp',
    'HDFCmpRootGroup.hpp',
    'HDFCmpSupportedFields.hpp',
    'HDFCommonFG.hpp',
    'HDFConfig.hpp',
    'HDFData.hpp',
    'HDFFile.hpp',
    'HDFFileLogGroup.hpp',
    'HDFGroup.hpp',
    'HDFMovieInfoGroup.hpp',
    'HDFNewBasReader.hpp',
    'HDFPlsReader.hpp',
    'HDFPlsWriter.hpp',
    'HDFPulseCallsWriter.hpp',
    'HDFPulseDataFile.hpp',
    'HDFPulseWriter.hpp',
    'HDFRefGroupGroup.hpp',
    'HDFRefInfoGroup.hpp',
    'HDFRegionsWriter.hpp',
    'HDFRegionTableReader.hpp',
    'HDFRegionTableWriter.hpp',
    'HDFScanDataReader.hpp',
    'HDFScanDataWriter.hpp',
    'HDFSentinalFile.hpp',
    'HDFSMRTSequenceReader.hpp',
    'HDFUtils.hpp',
    'HDFWriteBuffer.hpp',
    'HDFWriterBase.hpp',
    'HDFZMWMetricsWriter.hpp',
    'HDFZMWReader.hpp',
    'HDFZMWWriter.hpp']),
  subdir : 'libblasr/hdf')
