###########
# Sources #
###########

libblasr_sources += files([
  'PbiFilterZmwGroupQuery.cpp',
  'SequentialZmwGroupQuery.cpp'])

###########
# Headers #
###########

install_headers(
  files([
    'PbiFilterZmwGroupQuery.h',
    'SequentialZmwGroupQuery.h']),
  subdir : 'libblasr/alignment/query')
