###########
# Sources #
###########

libblasr_sources += files(['TitleTable.cpp'])

###########
# Headers #
###########

install_headers(
  files([
    'FindRandomSequence.hpp',
    'SequenceIndexDatabase.hpp',
    'SequenceIndexDatabaseImpl.hpp',
    'TitleTable.hpp']),
  subdir : 'libblasr/pbdata/metagenome')
