###########
# Sources #
###########

libblasr_sources += files([
  'AlnGroup.cpp',
  'MovieInfo.cpp',
  'RefGroup.cpp',
  'RefInfo.cpp'])

###########
# Headers #
###########

install_headers(
  files([
    'AlnGroup.hpp',
    'AlnInfo.hpp',
    'MovieInfo.hpp',
    'RefGroup.hpp',
    'RefInfo.hpp']),
  subdir : 'libblasr/pbdata/saf')
