###########
# Sources #
###########

libblasr_sources += files([
  'ReadGroup.cpp',
  'ReferenceSequence.cpp',
  'SAMAlignment.cpp',
  'SAMHeader.cpp',
  'SAMKeywordValuePair.cpp'])

###########
# Headers #
###########

install_headers(
  files([
    'AlignmentSet.hpp',
    'AlignmentSetImpl.hpp',
    'CigarString.h',
    'ReadGroup.hpp',
    'ReferenceSequence.hpp',
    'SAMAlignment.hpp',
    'SAMFlag.h',
    'SAMHeader.hpp',
    'SAMKeywordValuePair.hpp',
    'SAMKeywordValuePairImpl.hpp',
    'SAMReader.hpp',
    'SAMReaderImpl.hpp']),
  subdir : 'libblasr/pbdata/sam')
