###########
# Sources #
###########

libblasr_unittest_sources += files([
  'HDFScanDataWriter_gtest.cpp',
  'HDFCCSReader_gtest.cpp',
  'HDFZMWReader_gtest.cpp',
  'HDFPlsReader_gtest.cpp',
  'HDF2DArray_gtest.cpp',
  'HDFUtils_gtest.cpp',
  'HDFBasReader_gtest.cpp',
  'HDFScanDataReader_gtest.cpp'])
