##################
# Subdirectories #
##################

subdir('metagenome')
subdir('saf')
subdir('utils')
subdir('qvs')
subdir('reads')

###########
# Sources #
###########

libblasr_unittest_sources += files([
  'ScanData_gtest.cpp',
  'StringUtils_gtest.cpp',
  'SMRTSequence_gtest.cpp',
  'NucConversion_gtest.cpp',
  'VectorUtils_gtest.cpp',
  'defs_gtest.cpp',
  'FASTASequence_gtest.cpp',
  'ChangeListID_gtest.cpp',
  'FASTQReader_gtest.cpp',
  'SeqUtils_gtest.cpp',
  'CCSSequence_gtest.cpp',
  'utils_gtest.cpp',
  'FASTQSequence_gtest.cpp',
  'DNASequence_gtest.cpp',
  'FASTAReader_gtest.cpp'])
