###########
# Sources #
###########

libblasr_sources += files([
  'AlignmentCandidate.cpp',
  'AlignmentContext.cpp',
  'Alignment.cpp',
  'AlignmentMap.cpp',
  'AlignmentStats.cpp',
  'CmpFile.cpp',
  'FilterCriteria.cpp',
  'SAMToAlignmentCandidateAdapter.cpp'])

###########
# Headers #
###########

install_headers(
  files([
    'AlignedPair.h',
    'AlignmentCandidate.hpp',
    'AlignmentContext.hpp',
    'AlignmentGapList.h',
    'Alignment.hpp',
    'AlignmentMap.hpp',
    'AlignmentStats.hpp',
    'ByteAlignment.h',
    'CmpFile.hpp',
    'CmpIndexedStringTable.h',
    'CmpReadGroupTable.h',
    'CmpRefSeqTable.h',
    'FilterCriteria.hpp',
    'Path.h',
    'SAMToAlignmentCandidateAdapter.hpp']),
  subdir : 'libblasr/alignment/datastructures/alignment')
